Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-84658

Qt WebAssembly not working on iOS (Regression)

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.15.1
    • 5.15.0
    • QPA
    • None
    • WebAssembly
    • 974f23933838515d840361cdd4ed1d791b14250c (qt/qtbase/dev) 6a32de85419af224c512cb912cc6709563ad80e8 (qt/qtbase/5.15)

      Qt Web Assembly Applications fail to load on iOS devices. Interestingly, this is specific to the platform, not the Browser. The same application fails to load on Safari and Chrome on iOS, but works flawlessly on Chrome on any other Platform.

      I uploaded a qmake hello world app built with 5.15.0 WASM here:
      https://pwuertz.github.io/iosfail/QtWasmTest2.html

      On iOS devices, the application exits at startup with the error message:

      Application exit (TypeError: undefined is not an object (evaluating 'handle[name]'))

       

      I tried the reference 5.15.0 distribution with the suggested emscripten version 1.39.8, as well as updating emscripten and compiling Qt Wasm myself, to no effect.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            sorvig Morten Sørvig
            pwuertz Peter Würtz
            Votes:
            1 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes