Check for valid Navigator.permissions before use

Safari on iOS now supports the Navigator.clipboard
API, but not the Navigator.permissions API.

Looks like we have not encountered this combination
Before. Add undefined check for permissions as well.

Fixes: QTBUG-84658
Pick-to: 5.15
Change-Id: I99ab08fd34bbb29a82661e24bf400c927f3604f6
Reviewed-by: Lorn Potter <lorn.potter@gmail.com>